--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2470,8 +2470,7 @@ en:
   all:
     datepicker: mm-dd-yyyy
     map_attribution:
-      osm: Map data &copy; <a href="http://openstreetmap.org" target="_blank">OpenStreetMap</a>
-        contributors, %{attribution}
+      osm: &copy; <a href="http://openstreetmap.org" target="_blank">OpenStreetMap</a>, %{attribution}
       here: Here
     verb:
       new: New
