--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -707,6 +707,9 @@ en:
     template_excel: Import Template Spreadsheet
   admin:
     profiles:
+      jobs:
+        menu:
+          observation: Jobs
       menu:
         profiles: Profiles
       index:
