Uniformize kill optim behavior + Secure condition while optim being transmitted

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -698,6 +698,7 @@
       'automatic_insert_no_result': 'Affectation des arrêts impossible'
       'job_in_progress': 'Opération impossible pour le moment, une tâche de fond (optimisation)
         est en cours d''execution'
+      'transmission_in_progress': 'L''optimisation est en cours de transmission'
     'routes':
       'bad_barcode_char': 'Les données du code barre contiennent un caractère non
         pris en charge'
