--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,7 @@ en:
   default_time_zone: London
   list:
     all_rows: All rows
-    number_rows: '# Rows'
+    rows: 'Rows'
   activemodel:
     models:
       deliverable_unit:
