--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -508,6 +508,8 @@
         'ref_small': 'Réf.'
         'duration': 'Durée de visite'
         'duration_small': 'Durée'
+        'time_windows': Créneaux horaires
+        'time_windows_small': Créneaux
         'time_window_start_1': 'Début de Plage horaire 1'
         'time_window_start_1_small': 'Début 1'
         'time_window_end_1': 'Fin de Plage horaire 1'
