--- a/config/locales/fr.devices.yml
+++ b/config/locales/fr.devices.yml
@@ -109,6 +109,8 @@ fr:
           notico:
             title: Notico
             agent_id: "ID Livreur Notico Deliv"
+          planner:
+            title: Cartoway Mobile
           praxedo:
             title: Praxedo
             praxedo_agent_id: "Code Technicien Praxedo"
@@ -307,6 +309,12 @@ fr:
         action: Vider Notico Deliv
         success: Notico Deliv a été vidé avec succès
         fail: Échec lors de la suppression de Notico Deliv
+      planner_send:
+        access: Accéder à la tournée
+        transmit: Transmettre au chauffeur
+        action: Envoyer au chauffeur
+        success: Envoyé au chauffeur avec succès
+        fail: Échec lors de l'envoi
       praxedo_send:
         action: Envoyer à Praxedo
         success: Envoyé à Praxedo avec succès
@@ -342,6 +350,9 @@ fr:
           in_progress: Veuillez patienter
         notico:
           title: Notico Deliv
+          in_progress: Veuillez patienter
+        planner:
+          title: Cartoway Mobile
           in_progress: Veuillez patienter
         praxedo:
           title: Praxedo
