--- a/config/locales/fr.devices.yml
+++ b/config/locales/fr.devices.yml
@@ -311,9 +311,9 @@ fr:
         fail: Échec lors de la suppression de Notico Deliv
       planner_send:
         access: Accéder à la tournée
-        transmit: Transmettre au chauffeur
-        action: Envoyer au chauffeur
-        success: Envoyé au chauffeur avec succès
+        transmit: Transmettre au livreur
+        action: Envoyer au livreur
+        success: Envoyé au livreur avec succès
         fail: Échec lors de l'envoi
       praxedo_send:
         action: Envoyer à Praxedo
